@@ -1,3 +1,11 @@
+2008-01-01  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/34636
+	* include/parallel/algobase.h (lexicographical_compare_switch(...,
+	random_access_iterator_tag, random_access_iterator_tag)): Careful
+	with undereferenceable iterators.
+	* testsuite/25_algorithms/sort/34636.cc: New.
+
 2007-12-30  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/std/tuple (_Tuple_impl<>::_Tuple_impl(typename
